Copyrights update. Readme update. Licenses update. Lots of cleanup :-). Small fix on ac_complex.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1685 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -60,8 +60,8 @@ newmenu about
 
 menuitem "AssaultCube v0.94" ""
 menuitem ""
-menuitem "                     ...help"		"showmenu help"
-menuitem "                     ...credits"	"showmenu credits"
+menuitem "                     ...Help"		"showmenu help"
+menuitem "                     ...Credits"	"showmenu credits"
 menuitem ""
 menuitem "by 'Rabid Viper Productions'" "showmenu credits"
 menuitem "http://assault.cubers.net" "echo sorry no built-in web browser yet :)"
@@ -85,24 +85,71 @@ menuitem "...for further information/help see the README" "echo 2The readme can
 
 newmenu credits
 
-menuitem "Arghvark	Project Leader, Code" ""
-menuitem "driAn		Lead Coder" ""
-menuitem "makkE	Lead Artist" ""
-menuitem "		Maps, Models, Skins, Animation" ""
-menuitem "		Sound, Some Textures, 2D-Art" ""
-menuitem "Nieb		Models, Hosting" ""
-menuitem "Mitaman	Maps, Resources" ""
-menuitem "Verbal	QA, Advisor, Lead Tester" ""
-menuitem "Eihrul		Coder, Enet Library, Cube2 backporting" ""
-menuitem ""
-menuitem "Special thanks to:" ""
-menuitem ""
-menuitem "Aardappel (Engine), Rick (Bots), absinth (AC for Mac)" ""
-menuitem "JCDPC (Laptop Mapmodel), dtd (Hosting), Boeck" ""
-menuitem "DCP (music), ac_stef (bug fixes), RandumIdiot" ""
-menuitem "Ted Southard (DigitalFlux), Noctua Graphics, Arcitool" ""
-menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr," ""
-menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)" ""
+menuitem "Project Leaders" ""
+menuitem "-----------------" ""
+menuitem "driAn				Lead coder." ""
+menuitem "makkE			Lead artist, models, skins, animations," ""
+menuitem "				mapping, 2D-art, textures, sounds." ""
+menuitem "" ""
+menuitem "Active Developers/Contributors" ""
+menuitem "-----------------------------------" ""
+menuitem "eihrul				Coder, Enet Library, Cube2 backporting." ""
+menuitem "RandumIdiot		Mapping, documentation, tester, clean-up crew." ""
+menuitem "Flowtron			Universal team member, additional code, admin." ""
+menuitem "" ""
+menuitem "Community Mappers" ""
+menuitem "-----------------------" ""
+menuitem "Shadow			Map: ac_elevation." ""
+menuitem "Wotwot			Map: ac_power, plus textures." ""
+menuitem "daMfr0			Map: ac_snow." ""
+menuitem "MitaMAN			Map: ac_depot, plus textures." ""
+menuitem "Nieb				Map: ac_desert2, plus mapmodels, 2D-art and hosting." ""
+menuitem "" ""
+menuitem "Special thanks to..." ""
+menuitem "----------------------" ""
+menuitem "Aardappel & others	The Cube Game/Engine." ""
+menuitem "Arghvark			Previous project leader, game concept, code." ""
+menuitem "Verbal_			Q&A, advisor, lead tester, pro-coffee service." ""
+menuitem "Rick Helmus		Bot code." ""
+menuitem "absinth			Packaging AssaultCube for Mac." ""
+menuitem "dtd				Hosting." ""
+menuitem "ac_stef			Bug fixes." ""
+menuitem "" ""
+menuitem "						[ Page 2 ]"	[ showmenu "Credits (2)" ]
+
+newmenu "Credits (2)"
+
+menuitem "Resources (art/models/sounds)" ""
+menuitem "----------------------------------" ""
+menuitem "JCDPC					Laptop mapmodel, textures." ""
+menuitem "DCP						End-of-match music." ""
+menuitem "Toca						Mapmodels." ""
+menuitem "Topher					Some crosshairs." ""
+menuitem "leileilol					Bullethole image." ""
+menuitem "Articool					Textures." ""
+menuitem "Boeck						Textures." ""
+menuitem "Craig Fortune				Textures." ""
+menuitem "Digital Flux					Textures." ""
+menuitem "mayang.com				Textures." ""
+menuitem "afflict.net					Textures." ""
+menuitem "Golgotha team				Textures." ""
+menuitem "NOCTUA 					Textures." ""
+menuitem "Chris Zastrow				Textures." ""
+menuitem "Kurt Keslar					Dummy texture." ""
+menuitem "3D Cafe					Textures." ""
+menuitem "GRsites					Textures." ""
+menuitem "Lemog 3D					Textures." ""
+menuitem "Steini						Skyboxes." ""
+menuitem "wildweasel					Vote sounds." ""
+menuitem "Tremulous team				Gib sound." ""
+menuitem "Lukas Zapletal & Ludek Horacek	Music (Ping pong)." ""
+menuitem "imageafter.com				Textures." ""
+menuitem "Rohrschach					Textures." ""
+menuitem "mayang.com				Textures." ""
+menuitem "" ""
+menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for testing." ""
+menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." ""
+menuitem "" ""
 
 
 // create additional menus
