--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -94,7 +94,7 @@ menuitem "" ""
 menuitem "Active Developers/Contributors" ""
 menuitem "-----------------------------------" ""
 menuitem "eihrul				Coder, Enet Library, Cube2 backporting." ""
-menuitem "RandumIdiot		Mapping, documentation, tester, clean-up crew." ""
+menuitem "RandumIdiot			Mapping, documentation, tester, clean-up crew." ""
 menuitem "Flowtron			Universal team member, additional code, admin." ""
 menuitem "" ""
 menuitem "Community Mappers" ""
@@ -105,12 +105,12 @@ menuitem "daMfr0			Map: ac_snow." ""
 menuitem "MitaMAN			Map: ac_depot, plus textures." ""
 menuitem "Nieb				Map: ac_desert2, plus mapmodels, 2D-art and hosting." ""
 menuitem "" ""
-menuitem "Special thanks to..." ""
-menuitem "----------------------" ""
-menuitem "Aardappel & others	The Cube Game/Engine." ""
+menuitem "Special thanks" ""
+menuitem "----------------" ""
+menuitem "Aardappel & others		The Cube Game/Engine." ""
 menuitem "Arghvark			Previous project leader, game concept, code." ""
 menuitem "Verbal_			Q&A, advisor, lead tester, pro-coffee service." ""
-menuitem "Rick Helmus		Bot code." ""
+menuitem "Rick Helmus			Bot code." ""
 menuitem "absinth			Packaging AssaultCube for Mac." ""
 menuitem "dtd				Hosting." ""
 menuitem "ac_stef			Bug fixes." ""
@@ -119,33 +119,24 @@ menuitem "						[ Page 2 ]"	[ showmenu "Credits (2)" ]
 
 newmenu "Credits (2)"
 
-menuitem "Resources (art/models/sounds)" ""
-menuitem "----------------------------------" ""
-menuitem "JCDPC					Laptop mapmodel, textures." ""
+menuitem "Resources" ""
+menuitem "------------" ""
+menuitem "JCDPC						Laptop mapmodel, textures." ""
 menuitem "DCP						End-of-match music." ""
 menuitem "Toca						Mapmodels." ""
 menuitem "Topher					Some crosshairs." ""
 menuitem "leileilol					Bullethole image." ""
-menuitem "Articool					Textures." ""
-menuitem "Boeck						Textures." ""
-menuitem "Craig Fortune				Textures." ""
-menuitem "Digital Flux					Textures." ""
-menuitem "mayang.com				Textures." ""
-menuitem "afflict.net					Textures." ""
-menuitem "Golgotha team				Textures." ""
-menuitem "NOCTUA 					Textures." ""
-menuitem "Chris Zastrow				Textures." ""
 menuitem "Kurt Keslar					Dummy texture." ""
-menuitem "3D Cafe					Textures." ""
-menuitem "GRsites					Textures." ""
-menuitem "Lemog 3D					Textures." ""
 menuitem "Steini						Skyboxes." ""
 menuitem "wildweasel					Vote sounds." ""
 menuitem "Tremulous team				Gib sound." ""
 menuitem "Lukas Zapletal & Ludek Horacek	Music (Ping pong)." ""
-menuitem "imageafter.com				Textures." ""
-menuitem "Rohrschach					Textures." ""
-menuitem "mayang.com				Textures." ""
+menuitem "" ""
+menuitem "Texture sources" ""
+menuitem "------------------""
+menuitem "Articool, Boeck, Craig Fortune, Digital Flux, mayang.com, imageafter.com, " ""
+menuitem "Craig Fortune, Digital Flux, mayang.com, afflict.net, Rohrschach, Lemog 3D," ""
+menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe." ""
 menuitem "" ""
 menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for testing." ""
 menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." ""
