--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -131,6 +131,7 @@ menuitem "Steini						Skyboxes." ""
 menuitem "wildweasel					Vote sounds." ""
 menuitem "Tremulous team				Gib sound." ""
 menuitem "Lukas Zapletal & Ludek Horacek	Music (Ping pong)." ""
+menuitem "Antiklimax					Sniper scope." ""
 menuitem "" ""
 menuitem "Texture sources" ""
 menuitem "------------------""
