--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -203,6 +203,8 @@ newmenu video
 menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
 menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
 
+menuitemcheckbox "fullscreen: " "$fullscreen" "fullscreen $arg1"
+
 alias fsaa_valuemap "-1 2 4 8 16"
 menuitemslider "antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
 
@@ -233,7 +235,7 @@ menuitemslider "music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
 menuitemcheckbox "stereo: " "$stereo" "stereo $arg1"
 menuitemslider "channels: " 0 128 "$soundchans" 4 "" "soundchans $arg1"
 menuitemslider "sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
-menuitemslider "sound buffer: " 128 4096 "$soundbufferlen" 128 "" "soundbufferlen $arg1"
+menuitemslider "sound buffer length: " 128 4096 "$soundbufferlen" 128 "" "soundbufferlen $arg1"
 
 
 newmenu fpsrange
