dynamic crosshair menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1701 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -7,15 +7,8 @@ menuitem "select weapon.."        "showmenu weapons"
 menuitem "select crosshair.."	  "showmenu crosshairs"
 
 
-alias gencrosshairs [
-	loop i (listlen $arg1) [
-		alias label (at $arg1 $i)
-		menuitem $label (concat loadcrosshair $label)
-	]
-]
-
 newmenu crosshairs
-gencrosshairs "default.png cube.png dot.png dot_wide.png o.png o_dot.png o_x.png star.png wide.png x-dot.png"
+menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)"
 
 
 newmenu weapons
