... *sigh* More docs... Goodnight!
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1702 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -90,6 +90,9 @@ loadsky "textures/skymaps/steini/steini4"
 
 texturereset    // starts the texture slot/index at 0
 
+// Special note: Textures are limited to a maximum of 256, so you can not use more than 256 
+//               textures in a cfg, otherwise they will not show up.
+
 texture 0 "kurt/klite1.jpg" //dummy
 
 //-------------water-uncomment all but one!------
@@ -383,4 +386,5 @@ texture 0 "./makke/box_3.jpg"           //241
 texture 0 "./makke/smallsteelbox.jpg
 
 //------Start of 0.94 textures----------
+
 
