--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -13,7 +13,7 @@ menuitem "Help..."                              [ showmenu "Map editing help" ]
 // Start of "editing help" menu.
 newmenu "Map editing help"
 
-menuitem "Toggle: Edit mode					(Key: E)"	[ edittoggle; echo "Pressing E would be quicker." ]
+menuitem "Toggle: Edit mode						(Key: E)"	[ edittoggle; echo "Pressing E would be quicker." ]
 menuitem "Undo last cube manipulation				(Key: U)"	[ undo; echo "Pressing U would be quicker." ]
 menuitem "Copy selected cubes					(Key: C)"	[ copy; echo "Pressing C would be quicker." ]
 menuitem "Paste selected cubes					(Key: V)"	[ paste; echo "Selection has been pasted from the upper corner of the red dot. Pressing V would be quicker." ]
@@ -22,7 +22,7 @@ menuitem "Delete closest light, mapmodel or other entity	(Key: Backspace)"	[ del
 menuitem "Fullbright view"							"fullbright 1" 
 menuitem "Recalculate light"							"recalc"  
 menuitem "Toggle: Show geometric mipmaps			(Key: F5)"	"showmip"
-menuitem "Toggle: Occlusion culling				(Key: F6)"	"toggleocull"
+menuitem "Toggle: Occlusion culling					(Key: F6)"	"toggleocull"
 menuitem """"
 menuitem "Show more..."								[ showmenu "Map editing help (Page 2)" ]
 
@@ -30,22 +30,22 @@ menuitem "Show more..."								[ showmenu "Map editing help (Page 2)" ]
 newmenu "Map editing help (Page 2)"
 
 menuitem "Browse through floor textures				(Keys: Insert/Delete)"			[ showmenu "Browse floor textures" ]
-menuitem "Browse through wall textures					(Keys: Home/End)"		[ showmenu "Browse wall textures" ]
+menuitem "Browse through wall textures				(Keys: Home/End)"		[ showmenu "Browse wall textures" ]
 menuitem "Browse through ceiling textures				(Keys: Pageup/Pagedown)"	[ showmenu "Browse ceiling textures" ]
 menuitem "Browse through upper wall textures			(Keys: Keypad7/Keypad4)"		[ showmenu "Browse upper wall textures" ]
 menuitem "Move floor geometery up					(Key: [ )"			[ editheight 0 -1; echo "Pressing the left-bracket would be quicker." ]
-menuitem "Move floor geometery down					(Key: ] )"			[ editheight 0 1; echo "Pressing right-bracket would be quicker." ]
-menuitem "Move ceiling geometery up					(Key: O)"			[ editheight 2 -1; echo "Pressing O would be quicker." ]
+menuitem "Move floor geometery down				(Key: ] )"			[ editheight 0 1; echo "Pressing right-bracket would be quicker." ]
+menuitem "Move ceiling geometery up				(Key: O)"			[ editheight 2 -1; echo "Pressing O would be quicker." ]
 menuitem "Move ceiling geometery down				(Key: P)"				[ editheight 2 1; echo "Pressing P would be quicker." ]
-menuitem "Make selected geometery SOLID				(Key: F)"				[ solid 1; echo "Pressing F would be quicker." ]
-menuitem "Make selected geometery SPACE				(Key: G)"				[ solid 0; echo "Pressing G would be quicker." ]
-menuitem "Make selected geometery a corner				(Key: K)"			[ corner; echo "Pressing K would be quicker." ]
-menuitem "Equalize the floor level						(Key: ,)"		[ equalize 0; echo "Pressing , would be quicker." ]
+menuitem "Make selected geometery SOLID			(Key: F)"				[ solid 1; echo "Pressing F would be quicker." ]
+menuitem "Make selected geometery SPACE			(Key: G)"				[ solid 0; echo "Pressing G would be quicker." ]
+menuitem "Make selected geometery a corner			(Key: K)"			[ corner; echo "Pressing K would be quicker." ]
+menuitem "Equalize the floor level					(Key: ,)"		[ equalize 0; echo "Pressing , would be quicker." ]
 menuitem "Equalize the ceiling level					(Key: .)"			[ equalize 2; echo "Pressing . would be quicker." ]
-menuitem "Make the floor a heightfield					(Key: H)"			[ heightfield 0; echo "Pressing H would be quicker." ]
-menuitem "Make the ceiling a heightfield					(Key: I)"		[ heightfield 2; echo "Pressing I would be quicker." ]
+menuitem "Make the floor a heightfield				(Key: H)"			[ heightfield 0; echo "Pressing H would be quicker." ]
+menuitem "Make the ceiling a heightfield				(Key: I)"		[ heightfield 2; echo "Pressing I would be quicker." ]
 menuitem "Manipulate the corners of a cube (upward)		(Key: 8)"				[ vdelta -1; echo "Pressing 8 would be quicker." ]
-menuitem "Manipulate the corners of a cube (downward)		(Key: 9)"				[ vdelta 1; echo "Pressing 9 would be quicker." ]
+menuitem "Manipulate the corners of a cube (downward)	(Key: 9)"				[ vdelta 1; echo "Pressing 9 would be quicker." ]
 menuitem """"
 menuitem "See the reference for more editing commands..."						"showmenu Editing"
 
@@ -187,7 +187,7 @@ menuitem "Ladder entity"	"saycommand /newent ladder "
 newmenu pickups
 
 menuitem "Health"		"newent health"
-menuitem "Pistol Ammo"		"newent clips"
+menuitem "Pistol Magazine"	"newent clips"
 menuitem "Box of Ammo"		"newent ammobox"
 menuitem "Kevlar Vest"		"newent armour"
 menuitem "Akimbo"		"newent akimbo"
