Prep for "ladder_rung"
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1706 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_elevation.cfg
+++ b/ac/packages/maps/ac_elevation.cfg
@@ -24,10 +24,10 @@ mapmodel 3  2 0 0 "bench"          //9
 mapmodel 2 4 0 0 "dumpster"        //10
 mapmodel 0 0 0 0 "roadblock01"     //11 use nothing mapmodels to clip
 mapmodel 0 0 0 0 "roadblock02"     //12
-mapmodel 1 8 0 0 "fence"           //13 mind the orientation of fence components (lightning)
-mapmodel 1 8 0 0 "fencepost"       //14  
-mapmodel 1 8 0 0 "fencegate_open"  //15
-mapmodel 1 8 0 0 "fencegate_closed"//16
+mapmodel 0 8 0 0 "fence"           //13 mind the orientation of fence components (lightning)
+mapmodel 0 8 0 0 "fencepost"       //14  
+mapmodel 0 8 0 0 "fencegate_open"  //15
+mapmodel 0 8 0 0 "fencegate_closed"//16
 mapmodel 0 0 0 0 "grass01"         //17
 mapmodel 0 0 0 0 "grass01_d"       //18
 mapmodel 0 0 0 0 "grass01_s"       //19
@@ -54,7 +54,7 @@ mapmodel 0  0 0 0 "elektro"        //36
 mapmodel 3  1 0 0 "europalette"    //37
 mapmodel 0 0 0 0 "gastank"         //38 use nothing model to clip
 mapmodel 2 1 0 0 "gutter_h"        //39
-mapmodel 1 2 0 0 "gutter_v"        //40
+mapmodel 0 0 0 0 "gutter_v"        //40
 mapmodel 0 0 0 0 "wrench"          //41
 mapmodel 0 0 0 0 "screw"           //42
 mapmodel 0  0 0 0 "signs/flammable"//43
@@ -71,6 +71,8 @@ mapmodel 0 0 0 0 "coffeemug"       //53
 mapmodel 0 0 0 0 "flyer"           //54
 mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
 mapmodel 1 1 0 0 "aard"            //56
+mapmodel 0 8 0 0 "nothing"	   //57
+mapmodel 0 1 0 0 "ladder_rung"     //58
 
 // skybox for this map - check /packages/skymaps/
 
