Fixing of spacings. Options menus are cleaner :D
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1708 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -45,11 +45,11 @@ menuitem "Show all maps.." [showmenu "all maps"]
 
 newmenu demo
 
-menuitem "record demo"              "recorddemo"
-menuitem "play demo"                [showmenu "play demo"]
-menuitem "stop recording/playback"  "stopdemo"
-menuitem "list demos"               "listdemos"
-menuitem "getdemo"                  "getdemo"
+menuitem "Record demo"              "recorddemo"
+menuitem "Play demo"                [showmenu "play demo"]
+menuitem "Stop recording/playback"  "stopdemo"
+menuitem "List demos"               "listdemos"
+menuitem "Getdemo"                  "getdemo"
 
 
 newmenu "play demo"
