--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -1,17 +1,18 @@
 newmenu setup
 
-menuitemtextinput "nickname: " "result $curname" "name $arg1"
-menuitemslider "team: " 0 1 "(curteam)" 1 "CLA RVSF" [team (at [CLA RVSF] $arg1)]
-menuitem "select skin.."          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "select weapon.."        "showmenu weapons"
-menuitem "select crosshair.."	  "showmenu crosshairs"
+menuitemtextinput "Nickname:		" "result $curname" "name $arg1"
+menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" [team (at [CLA RVSF] $arg1)]
+menuitem "" ""
+menuitem "Select skin.."          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "Select weapon.."        "showmenu Weapons"
+menuitem "Select crosshair..				"	  "showmenu Crosshairs"
 
 
-newmenu crosshairs
+newmenu Crosshairs
 menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)"
 
 
-newmenu weapons
+newmenu Weapons
 
 menumdl weapons/assault/menu mapmodel 75 12
 menuitem "MTP-57 Assault Rifle"			"nextprimary 5;echo MTP-57 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu mapmodel 75 12"
@@ -42,22 +43,22 @@ menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50
 
 newmenu settings
 
-menuitem "quick setup.."                                            [ showmenu "quick setup" ]
-menuitem "keyboard/mouse controls"                                  "showmenu controls"
-menuitem "video settings"                                           "showmenu video"
-menuitem "sound settings"                                           "showmenu sound"
+menuitem "Quick setup.."                                            [ showmenu "quick setup" ]
+menuitem "Keyboard/mouse controls"                                  "showmenu controls"
+menuitem "Video settings"                                           "showmenu video"
+menuitem "Sound settings"                                           "showmenu sound"
 
 
 newmenu "quick setup"
 
-menuitemtextinput "nickname: " "" "name $arg1"
-menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
-menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
-menuitemslider "mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
-menuitemslider "graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
-menuitemslider "sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
+menuitemtextinput "Nickname:					" "" "name $arg1"
+menuitemtextinput "Resolution (Width):				" "$scr_w" "scr_w $arg1"
+menuitemtextinput "Resolution (Height):			" "$scr_h" "scr_h $arg1"
+menuitemslider "Mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
+menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
+menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
 menuitem "" ""
-menuitem "OK" "resetgl"
+menuitem "				[ OK ]				" "resetgl"
 
 alias getgfxq [
     if (= $minlod 200) [ result 4 ] [
@@ -165,67 +166,67 @@ newmenu controls
 
 menuitem "Select an action and press ENTER to set a new key-binding"
 menuitem ""
-menuitemkeyinput "forward: "        forward
-menuitemkeyinput "left: "           left
-menuitemkeyinput "backward: "       backward
-menuitemkeyinput "right: "          right
-menuitemkeyinput "attack: "         attack
-menuitemkeyinput "special action: " altaction
-menuitemkeyinput "jump: "           jump
-menuitemkeyinput "crouch: "         crouch
-menuitemkeyinput "reload: "         reload
-menuitemkeyinput "weapon menu: "    "showmenu weapons"
-menuitemkeyinput "next weapon: "     "universaldelta  1"
-menuitemkeyinput "previous weapon: " "universaldelta -1"
-menuitemkeyinput "show scores: "    showscores
-menuitemkeyinput "chat: "           saycommand
-menuitemkeyinput "team chat: "      "saycommand %"
-menuitemkeyinput "commandline: "    "saycommand /"
-menuitemkeyinput "console output: " toggleconsole
-menuitemkeyinput "screenshot: "     screenshot
-menuitemkeyinput "map overview: "   toggleshowmap
-menuitemkeyinput "drop CTF flag: "  dropflag
+menuitemkeyinput "Forwards: "        forward
+menuitemkeyinput "Left: "           left
+menuitemkeyinput "Backwards: "       backward
+menuitemkeyinput "Right: "          right
+menuitemkeyinput "Attack: "         attack
+menuitemkeyinput "Special action: " altaction
+menuitemkeyinput "Jump: "           jump
+menuitemkeyinput "Crouch: "         crouch
+menuitemkeyinput "Reload: "         reload
+menuitemkeyinput "Weapon menu: "    "showmenu weapons"
+menuitemkeyinput "Next weapon: "     "universaldelta  1"
+menuitemkeyinput "Previous weapon: " "universaldelta -1"
+menuitemkeyinput "Show scores: "    showscores
+menuitemkeyinput "Chat: "           saycommand
+menuitemkeyinput "Team chat: "      "saycommand %"
+menuitemkeyinput "Commandline: "    "saycommand /"
+menuitemkeyinput "Console output: " toggleconsole
+menuitemkeyinput "Screenshot: "     screenshot
+menuitemkeyinput "Map overview: "   toggleshowmap
+menuitemkeyinput "Drop CTF flag: "  dropflag
 menuitem ""
-menuitemcheckbox "invert mouse: " "$invmouse" "invmouse $arg1"
-menuitemslider "mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
+menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
+menuitemslider "Mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
 
 
 newmenu video
 
 
-menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
-menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
+menuitemtextinput "Screen width:				" "$scr_w" "scr_w $arg1"
+menuitemtextinput "Screen height:				" "$scr_h" "scr_h $arg1"
 
-menuitemcheckbox "fullscreen: " "$fullscreen" "fullscreen $arg1"
+menuitemcheckbox "Fullscreen: " "$fullscreen" "fullscreen $arg1"
 
 alias fsaa_valuemap "-1 2 4 8 16"
-menuitemslider "antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
+menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
 
-menuitemslider "vsync: " 0 1 "$vsync" 1 "off on" "vsync $arg1"
+menuitemslider "Vsync: " 0 1 "$vsync" 1 "off on" "vsync $arg1"
 
-menuitemslider "gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
+menuitemslider "Gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
 
 alias minlod_valuemap "25 60 100 250"
-menuitemslider "minimal level of detail: " 25 250 "(findlist $minlod_valuemap $minlod)" 5 ["low" "decent" "good" "best"] "minlod (at $minlod_valuemap $arg1)"
-menuitemcheckbox "water reflection: " "$waterreflect" "waterreflect $arg1"
+menuitemslider "Minimal level of detail: " 25 250 "(findlist $minlod_valuemap $minlod)" 5 ["low" "decent" "good" "best"] "minlod (at $minlod_valuemap $arg1)"
+menuitemcheckbox "Water reflection: " "$waterreflect" "waterreflect $arg1"
 
 alias watersubdiv_valuemap "16 8 4 2 1"
-menuitemslider "water subdivision: " 0 4 "(findlist $watersubdiv_valuemap $watersubdiv)" 1 ["lowest quality" "low quality" "medium quality" "high quality" "highest quality"] "watersubdiv (at $watersubdiv_valuemap $arg1)"
+menuitemslider "Water subdivision: " 0 4 "(findlist $watersubdiv_valuemap $watersubdiv)" 1 ["lowest quality" "low quality" "medium quality" "high quality" "highest quality"] "watersubdiv (at $watersubdiv_valuemap $arg1)"
 
-menuitemcheckbox "dynamic light: " "$dynlight" [ if (= $arg1 1) [ dynlight 16 ] [ dynlight 0 ] ]
-menuitemcheckbox "dynamic player shadows: " "$dynshadow" [ if (= $arg1 1) [ dynshadow 40 ] [ dynshadow 0 ] ]
-menuitemslider "light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
-menuitem "fpsrange.." "showmenu fpsrange"
+menuitemcheckbox "Dynamic light: " "$dynlight" [ if (= $arg1 1) [ dynlight 16 ] [ dynlight 0 ] ]
+menuitemcheckbox "Dynamic player shadows: " "$dynshadow" [ if (= $arg1 1) [ dynshadow 40 ] [ dynshadow 0 ] ]
+menuitemslider "Light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
+menuitem "FPS range.." "showmenu fpsrange"
 
 menuitem "" ""
-menuitem "OK" resetgl
+menuitem "				[ OK ]				" resetgl
 
 
 newmenu sound
 
 menuitemslider "sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
 menuitemslider "music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
-menuitemcheckbox "stereo: " "$stereo" "stereo $arg1"
+menuitemcheckbox "stereo:							" "$stereo" "stereo $arg1"
 menuitemslider "channels: " 0 128 "$soundchans" 4 "" "soundchans $arg1"
 menuitemslider "sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
 menuitemslider "sound buffer length: " 128 4096 "$soundbufferlen" 128 "" "soundbufferlen $arg1"
