--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -4,7 +4,7 @@ menuitemtextinput "Nickname:		" "result $curname" "name $arg1"
 menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" [team (at [CLA RVSF] $arg1)]
 menuitem "" ""
 menuitem "Select skin.."          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "Select weapon.."        "showmenu Weapons"
+menuitem "Select weapon.."        "showmenu weapons"
 menuitem "Select crosshair..				"	  "showmenu Crosshairs"
 
 
@@ -12,7 +12,7 @@ newmenu Crosshairs
 menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)"
 
 
-newmenu Weapons
+newmenu weapons
 
 menumdl weapons/assault/menu mapmodel 75 12
 menuitem "MTP-57 Assault Rifle"			"nextprimary 5;echo MTP-57 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu mapmodel 75 12"
