reset all settings (menu)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1714 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -44,10 +44,10 @@ menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50
 newmenu settings
 
 menuitem "Quick setup.."                                            [ showmenu "quick setup" ]
-menuitem "Keyboard/mouse controls"                                  "showmenu controls"
-menuitem "Video settings"                                           "showmenu video"
-menuitem "Sound settings"                                           "showmenu sound"
-
+menuitem "Keyboard/mouse controls.."                                "showmenu controls"
+menuitem "Video settings.."                                         "showmenu video"
+menuitem "Sound settings.."                                         "showmenu sound"
+menuitem "Reset all settings.."                              [ showmenu "reset settings" ]
 
 newmenu "quick setup"
 
@@ -161,6 +161,14 @@ alias new_sound_quality [
         ]
     ]
 ]
+
+
+newmenu "reset settings"
+
+menuitem "Reset all settings?"
+menuitem "" ""
+menuitem "Yes, reset and quit now!" "resetcfg 1; quit"
+menuitem "No"
 
 newmenu controls
 
