--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -111,7 +111,7 @@ keymap 287 F6 "showmip"
 keymap 288 F7 "spectate"
 keymap 289 F8 "followplayer 1"
 keymap 290 F9 ""
-keymap 291 F10 ""
+keymap 291 F10 "getdemo"
 keymap 292 F11 "toggleconsole"
 keymap 293 F12 [ screenshot; sleep 3 [ echo "screenshot created" ] ]
 keymap 294 F13 ""
