--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -1,6 +1,6 @@
 newmenu setup
 
-menuitemtextinput "Nickname:		" "result $curname" "name $arg1"
+menuitemtextinput "Nickname:			" "result $curname" "name $arg1"
 menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" [team (at [CLA RVSF] $arg1)]
 menuitem "" ""
 menuitem "Select skin.."          [showmenu (at [CLA RVSF] (curteam))]
@@ -53,7 +53,7 @@ newmenu "quick setup"
 
 menuitemtextinput "Nickname:					" "" "name $arg1"
 menuitemtextinput "Resolution (Width):				" "$scr_w" "scr_w $arg1"
-menuitemtextinput "Resolution (Height):			" "$scr_h" "scr_h $arg1"
+menuitemtextinput "Resolution (Height):				" "$scr_h" "scr_h $arg1"
 menuitemslider "Mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
@@ -163,10 +163,8 @@ alias new_sound_quality [
 ]
 
 
-newmenu "reset settings"
+newmenu "Are you sure you want to reset ALL settings?"
 
-menuitem "Reset all settings?"
-menuitem "" ""
 menuitem "Yes, reset and quit now!" "resetcfg 1; quit"
 menuitem "No"
 
@@ -202,8 +200,8 @@ menuitemslider "Mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $a
 newmenu video
 
 
-menuitemtextinput "Screen width:				" "$scr_w" "scr_w $arg1"
-menuitemtextinput "Screen height:				" "$scr_h" "scr_h $arg1"
+menuitemtextinput "Screen width:					" "$scr_w" "scr_w $arg1"
+menuitemtextinput "Screen height:					" "$scr_h" "scr_h $arg1"
 
 menuitemcheckbox "Fullscreen: " "$fullscreen" "fullscreen $arg1"
 
