*Breaks CVS server by making it really happy* :) :D :DD >:( xD :P :/ :DD :DD :DD
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1718 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -47,7 +47,8 @@ menuitem "Quick setup.."                                            [ showmenu "
 menuitem "Keyboard/mouse controls.."                                "showmenu controls"
 menuitem "Video settings.."                                         "showmenu video"
 menuitem "Sound settings.."                                         "showmenu sound"
-menuitem "Reset all settings.."                              [ showmenu "reset settings" ]
+menuitem "" ""
+menuitem "Delete and reset all settings.."                              [ showmenu "Are you sure you want to delete/reset ALL settings?" ]
 
 newmenu "quick setup"
 
@@ -163,10 +164,10 @@ alias new_sound_quality [
 ]
 
 
-newmenu "Are you sure you want to reset ALL settings?"
+newmenu "Are you sure you want to delete/reset ALL settings?"
 
 menuitem "Yes, reset and quit now!" "resetcfg 1; quit"
-menuitem "No"
+menuitem "No, go back!" "showmenu settings"
 
 newmenu controls
 
