--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -196,10 +196,17 @@ menuitemkeyinput "Drop CTF flag: "  dropflag
 menuitem ""
 menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
 menuitemslider "Mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
+menuitem ""
+menuitem "Reset ALL binds to defaults?" [ showmenu "Are you sure?" ]
 
+alias resetbinds "exec config/resetbinds.cfg"
+
+newmenu "Are you sure?"
+
+menuitem "Yes, please reset all my binds to defaults" "resetbinds"
+menuitem "No! Take me back!" "showmenu controls"
 
 newmenu video
-
 
 menuitemtextinput "Screen width:					" "$scr_w" "scr_w $arg1"
 menuitemtextinput "Screen height:					" "$scr_h" "scr_h $arg1"
