ladder_rung added to cfgs
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1726 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -71,6 +71,7 @@ mapmodel 0 0 0 0 "coffeemug"       //53
 mapmodel 0 0 0 0 "flyer"           //54
 mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
 mapmodel 1 1 0 0 "aard"            //56
+mapmodel 0 1 0 0 "ladder_rung"     //57
 
 // skybox for this map - check /packages/skymaps/
 
