--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -98,6 +98,7 @@ menuitem "Bridge(8x8)"        	"saycommand /newent mapmodel 1 "
 
 newmenu ladders
 
+menuitem "One Ladder rung"       "newent mapmodel 57"
 menuitem "Ladder(7)"             "newent mapmodel 2"             
 menuitem "Ladder(8)"             "newent mapmodel 3"
 menuitem "Ladder(10)"            "newent mapmodel 4"
