Changelog update. Rly tiny map fixes. Slight change to bot editing menu. New linux bins.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1751 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -80,7 +80,6 @@ newmenu "Creating bot waypoints"
 
 menuitem "Waypoints..."			[ showmenu "Waypoints" ]
 menuitem "Paths..."			[ showmenu "Paths" ]
-menuitem "Deletion..."			[ showmenu "Deletion" ]
 menuitem "Other operations..."		[ showmenu "Other bot operations" ]
 menuitem """"
 menuitem "Flood map with waypoints"	"wpflood"
@@ -91,26 +90,22 @@ newmenu Waypoints
 
 menuitem "Add waypoint"				"addwp 0"
 menuitem "Add auto-connecting waypoint"		"addwp 1"
+menuitem """"
+menuitem "Delete waypoint"			"delwp"
+menuitem "Delete all waypoints"			[ showmenu "Delete all waypoints?" ]
 
 
 newmenu Paths
 
-menuitem "Start of 1-way path"			"addpath1way1"
-menuitem "End of 1-way path"			"addpath1way2"
-menuitem "Start of 2-way path"			"addpath2way1"
-menuitem "End of 2-way path"			"addpath2way2"
-
-
-newmenu Deletion
-
-menuitem "Delete waypoint"			"delwp"
-menuitem """"
-menuitem "Delete all waypoints"			[ showmenu "Delete all waypoints?" ]
-menuitem """"
-menuitem "Delete Start of 1-way path"		"delpath1way1" 
-menuitem "Delete End of 1-way path"		"delpath1way2" 
+menuitem "Create Start of 2-way path"			"addpath2way1"
+menuitem "Create End of 2-way path"			"addpath2way2"
 menuitem "Delete Start of 2-way path"		"delpath2way1"
 menuitem "Delete End of 2-way path"		"delpath2way2"
+menuitem """"
+menuitem "Create Start of 1-way path"			"addpath1way1"
+menuitem "Create End of 1-way path"			"addpath1way2"
+menuitem "Delete Start of 1-way path"		"delpath1way1" 
+menuitem "Delete End of 1-way path"		"delpath1way2"
 
 
 newmenu "Other bot operations"
