team choice menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1753 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -1,12 +1,13 @@
 newmenu setup
 
 menuitemtextinput "Nickname:			" "result $curname" "name $arg1"
-menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" [team (at [CLA RVSF] $arg1)]
+menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" "alias newteam $arg1"
 menuitem "" ""
 menuitem "Select skin.."          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Select weapon.."        "showmenu weapons"
 menuitem "Select crosshair..				"	  "showmenu Crosshairs"
-
+menuitem "" ""
+menuitem "[ OK ]" [team (at [CLA RVSF] $newteam)]
 
 newmenu Crosshairs
 menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)"
