--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -28,7 +28,8 @@ registersound "player/pain5"        //S_PAIN5
 registersound "player/pain6"        //S_PAIN6
 registersound "player/die1"         //S_DIE1
 registersound "player/die2"         //S_DIE2
-registersound "weapon/grenade_exp"           //S_FEXPLODE
+//registersound "weapon/grenade_exp"           //S_FEXPLODE
+registersound "ctf/flagscore"           //S_FEXPLODE
 registersound "player/splash1"      //S_SPLASH1
 registersound "player/splash2"      //S_SPLASH2
 registersound "ctf/flagdrop"       //S_FLAGDROP
@@ -45,7 +46,7 @@ registersound "misc/vote/vote_call" // S_CALLVOTE
 registersound "misc/vote/vote_pass" // S_VOTEPASS
 registersound "misc/vote/vote_fail" // S_VOTEFAIL
 registersound "player/footsteps" 100 1    // S_FOOTSTEPS
-registersound "player/crouch" 100 // S_FOOTSTEPSCROUCH
+registersound "player/crouch" 100 1 // S_FOOTSTEPSCROUCH
 
 registersound "voicecom/affirmative"
 registersound "voicecom/allrightsir"
