--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -157,11 +157,11 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/GS"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\enet\include;..\include;..\src"
+				AdditionalIncludeDirectories="..\include\al\vorbis;..\include\al\ogg;..\enet\include;..\include;..\src;..\include\al"
 				PreprocessorDefinitions="WIN32,_DEBUG,_CONSOLE,ENET_DEBUG"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				UsePrecompiledHeader="0"
+				UsePrecompiledHeader="1"
 				PrecompiledHeaderThrough="pch.h"
 				PrecompiledHeaderFile=".\Debug/cube.pch"
 				AssemblerListingLocation=".\Debug/"
@@ -188,7 +188,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="odbc32.lib odbccp32.lib zdll.lib opengl32.lib glu32.lib msvcrt.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib winmm.lib SDL_mixer.lib"
+				AdditionalDependencies="ogg.lib vorbis.lib vorbisfile.lib vorbisenc.lib alut.lib openal32.lib efx-util.lib odbc32.lib odbccp32.lib zdll.lib opengl32.lib glu32.lib msvcrt.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib winmm.lib"
 				OutputFile="../../bin_win32/ac_client.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -294,8 +294,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="msvcrt.lib zlib.lib opengl32.lib glu32.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib SDL_mixer.lib fmodvc.lib winmm.lib"
+				AdditionalOptions="/MACHINE:I386 /PROFILE"
+				AdditionalDependencies="msvcrt.lib zdll.lib opengl32.lib glu32.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib SDL_mixer.lib fmodvc.lib winmm.lib"
 				OutputFile="..\..\bin_win32\ac_client.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -1113,6 +1113,14 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
+						Name="Profile|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
 						Name="Standalone|Win32"
 						>
 						<Tool
@@ -1142,6 +1150,14 @@
 					</FileConfiguration>
 					<FileConfiguration
 						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Profile|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -1185,6 +1201,14 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
+						Name="Profile|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
 						Name="Standalone|Win32"
 						>
 						<Tool
@@ -1214,6 +1238,14 @@
 					</FileConfiguration>
 					<FileConfiguration
 						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Profile|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -1257,6 +1289,14 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
+						Name="Profile|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
 						Name="Standalone|Win32"
 						>
 						<Tool
@@ -1293,6 +1333,14 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
+						Name="Profile|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
 						Name="Standalone|Win32"
 						>
 						<Tool
@@ -1322,6 +1370,14 @@
 					</FileConfiguration>
 					<FileConfiguration
 						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Profile|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -1699,6 +1755,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="2"
 						PrecompiledHeaderThrough="pch.h"
 					/>
 				</FileConfiguration>
@@ -1804,6 +1861,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\config\firstrun.cfg"
+				>
+			</File>
+			<File
 				RelativePath="..\..\config\keymap.cfg"
 				>
 			</File>
@@ -1813,6 +1874,22 @@
 			</File>
 			<File
 				RelativePath="..\..\config\menus.cfg"
+				>
+			</File>
+			<File
+				RelativePath="..\..\config\menus_bot.cfg"
+				>
+			</File>
+			<File
+				RelativePath="..\..\config\menus_edit.cfg"
+				>
+			</File>
+			<File
+				RelativePath="..\..\config\menus_multiplayer.cfg"
+				>
+			</File>
+			<File
+				RelativePath="..\..\config\menus_settings.cfg"
 				>
 			</File>
 			<File
