--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -73,7 +73,7 @@ alias genbotmaps [
 	]
 ]
 
-genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic"
+genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic ac_urban"
 
 
 newmenu "Creating bot waypoints"
