--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -29,7 +29,7 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems	"ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic"
+genmapitems	"ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic ac_urban"
 menuitem	""""
 menuitem	"Show all maps..." [ showmenu "all maps" ]
 
@@ -38,7 +38,7 @@ menudirlist "packages/maps" "cgz" "map $arg1"
 
 newmenu maps_ctf 
 
-genmapitems "ac_mines ac_depot ac_power ac_elevation"
+genmapitems "ac_mines ac_depot ac_power ac_elevation ac_urban"
 menuitem """"
 menuitem "Show all maps.." [showmenu "all maps"]
 
@@ -104,6 +104,7 @@ menuitem "Wotwot				Map: ac_power, plus textures." ""
 menuitem "daMfr0				Map: ac_snow." ""
 menuitem "MitaMAN			Map: ac_depot, plus textures." ""
 menuitem "Nieb				Map: ac_desert2, plus mapmodels, 2D-art and hosting." ""
+menuitem "Archangel			Map: ac_urban." ""
 menuitem "" ""
 menuitem "Special thanks" ""
 menuitem "----------------" ""
