--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -1,8 +1,9 @@
 registersound "player/jump"         //S_JUMP
 registersound "player/step" 60      // S_SOFTLAND
 registersound "player/land" 40      // S_HARDLAND
-registersound "weapon/clip_empty"   // S_BULLETBOUNCE   TODO:NEW SOUND
-registersound "weapon/clip_empty"   // S_BULLETAIR      TODO:NEW SOUND
+registersound "weapon/ric1"         // S_BULLETAIR1
+registersound "weapon/ric2"         // S_BULLETAIR2
+registersound "weapon/ric3"         // S_BULLETHIT
 registersound "weapon/knife"        //S_KNIFE
 registersound "weapon/usp"          //S_PISTOL
 registersound "weapon/pistol_reload"           //S_RPISTOL
@@ -28,8 +29,7 @@ registersound "player/pain5"        //S_PAIN5
 registersound "player/pain6"        //S_PAIN6
 registersound "player/die1"         //S_DIE1
 registersound "player/die2"         //S_DIE2
-//registersound "weapon/grenade_exp"           //S_FEXPLODE
-registersound "ctf/flagscore"           //S_FEXPLODE
+registersound "weapon/grenade_exp"           //S_FEXPLODE
 registersound "player/splash1"      //S_SPLASH1
 registersound "player/splash2"      //S_SPLASH2
 registersound "ctf/flagdrop"       //S_FLAGDROP
